--- a/RTB_auto_insurance21oct.html
+++ b/RTB_auto_insurance21oct.html
@@ -488,7 +488,7 @@
                <div class="col-md-4">
     <div class="form-group">
         <label for="original_lead_submit_date">Original Lead Submit Date</label>
-        <input type="date" class="form-control" id="original_lead_submit_date" required>
+        <input type="datetime-local" class="form-control" id="original_lead_submit_date" required>
     </div>
 </div>
 
@@ -557,3 +557,4 @@
  
 </body>
 </html>
+
