--- a/RTB_auto_insurance21oct.html
+++ b/RTB_auto_insurance21oct.html
@@ -261,7 +261,7 @@
 <div class="col-md-4">
                     <div class="form-group">
                         <label for="policy_start_date">Policy Start Date (MM/DD/YYYY)</label>
-                        <input type="text" class="form-control" id="policy_start_date" placeholder="MM/DD/YYYY" required>
+                        <input type="date" class="form-control" id="policy_start_date" placeholder="MM/DD/YYYY" required>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -557,4 +557,5 @@
  
 </body>
 </html>
+
 
