--- a/PV_ringbaRTB_4Nov.html
+++ b/PV_ringbaRTB_4Nov.html
@@ -194,7 +194,7 @@
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js?ver=1"></script>
   <script src="https://js.formifyweb.com/PV_ringbaRTB_4Nov.js"></script>
   
   <script>
