--- a/Pv_roofing_apiPosting_wrm.html
+++ b/Pv_roofing_apiPosting_wrm.html
@@ -177,6 +177,10 @@
     <option value="80023">80023 (www.eeckc.com)</option>    
      <option value="80024">80024 (www.yourhomeimprovementco.com)</option> 
     <option value="80025">80025 (www.hansons.com)</option> 
+    <option value="80026">80026 (www.remodelrenovationusa.com)</option>
+    <option value="80027">80027 (www.remodelusallc.com)</option>
+    <option value="80028">80028 (www.homeadvisor.com)</option>
+    <option value="80029">80029 (www.americanremodeling.net)</option>
     
   </select>
 </div>
@@ -189,6 +193,14 @@
     <option value="www.eeckc.com<">www.eeckc.com</option>  
     <option value="www.yourhomeimprovementco.com<">www.yourhomeimprovementco.com</option> 
     <option value="www.hansons.com">www.hansons.com</option> 
+    <option value="www.remodelrenovationusa.com">www.remodelrenovationusa.com</option>
+    <option value="www.remodelusallc.com">www.remodelusallc.com</option>
+    <option value="www.homeadvisor.com">www.homeadvisor.com</option>
+    <option value="www.americanremodeling.net">www.americanremodeling.net</option>
+
+
+
+    
   </select>
 </div>
 <div class="row">
@@ -213,6 +225,7 @@
 </script>
 </body>
 </html>
+
 
 
 
