--- a/PV_ringbaRTB_12Nov.html
+++ b/PV_ringbaRTB_12Nov.html
@@ -79,7 +79,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js?ver=1"></script>
-  <script src="https://js.formifyweb.com/PV_ringbaRTB_12Nov"></script>
+  <script src="https://js.formifyweb.com/PV_ringbaRTB_12Nov.js"></script>
   
   <script>
     // Disable right-click
