--- a/Pv_client2_roofing_apiPosting_bid.html
+++ b/Pv_client2_roofing_apiPosting_bid.html
@@ -160,7 +160,7 @@
 <div class="col-md-6">
   <label class="form-label">Landing Page URL</label>
   <select class="form-control" id="landing_page_url" required>
-     <option value="www.myhomerevamp.com" selected>www.myhomerevamp.com</option>
+     <option value="https://www.myhomerevamp.com" selected>www.myhomerevamp.com</option>
   </select>
 </div>
 <div class="row">
@@ -185,6 +185,7 @@
 </script>
 </body>
 </html>
+
 
 
 
