--- a/Pv_client2_windows_apiPosting_bid.html
+++ b/Pv_client2_windows_apiPosting_bid.html
@@ -150,7 +150,7 @@
 <div class="col-md-6">
   <label class="form-label">Landing Page URL</label>
   <select class="form-control" id="landing_page_url" required>
-     <option value="www.myhomerevamp.com" selected>www.myhomerevamp.com</option>
+     <option value="https://www.myhomerevamp.com" selected>www.myhomerevamp.com</option>
     
   </select>
 </div>
@@ -179,6 +179,7 @@
 </script>
 </body>
 </html>
+
 
 
 
