--- a/clientcare_tdpost_13nov.html
+++ b/clientcare_tdpost_13nov.html
@@ -204,7 +204,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/clientcare_tdpost_13nov.js"></script>
+  <script src="https://js.formifyweb.com/clientcare_tdpost_13nov.js?ver=1"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
@@ -214,3 +214,4 @@
     </script>
 </body>
 </html>
+
