--- a/Pv_client2_roofing_apiPosting_bid.html
+++ b/Pv_client2_roofing_apiPosting_bid.html
@@ -153,7 +153,10 @@
 <div class="col-md-6">
   <label class="form-label">Source Id</label>
   <select class="form-control" id="source_id" required>
-    <option value="30001">30001 (www.myhomerevamp.com)</option>    
+    <option value="30001">30001 (www.myhomerevamp.com)</option>  
+    <option value="30012">30012 (www.tailoredremodeling.com)</option>
+    <option value="30013">30013 (www.yourhomeimprovementco.com)</option>
+    <option value="30014">30014 (www.swremodeling.com)</option>
   </select>
 </div>
 
@@ -161,6 +164,10 @@
   <label class="form-label">Landing Page URL</label>
   <select class="form-control" id="landing_page_url" required>
      <option value="https://www.myhomerevamp.com" selected>www.myhomerevamp.com</option>
+    <option value="https://www.tailoredremodeling.com">www.tailoredremodeling.com</option>
+     <option value="https://www.yourhomeimprovementco.com">www.yourhomeimprovementco.com</option>
+     <option value="https://swremodeling.com">www.swremodeling.com</option>
+
   </select>
 </div>
 <div class="row">
@@ -185,6 +192,7 @@
 </script>
 </body>
 </html>
+
 
 
 
