--- a/PV_Auto_rtb4dec.html
+++ b/PV_Auto_rtb4dec.html
@@ -89,7 +89,7 @@
         <div class="col-md-6">
           <div class="form-group">
             <label for="ip_address">IP Address</label>
-            <input type="text" class="form-control" id="ip_address" placeholder="IPv4 or IPv6">
+            <input type="text" class="form-control" id="ip_address" placeholder="">
           </div>
         </div>
       </div>
@@ -305,4 +305,5 @@
     });
   </script>
 </body>
+
 </html>
