--- a/PV_Auto_rtb4dec.html
+++ b/PV_Auto_rtb4dec.html
@@ -291,7 +291,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/PV_Auto_rtb4dec.js"></script>
+  <script src="https://js.formifyweb.com/PV_Auto_rtb4dec.js?ver=1"></script>
   
 
   
@@ -307,3 +307,4 @@
 </body>
 
 </html>
+
