--- a/PV_Auto_rtb4dec.html
+++ b/PV_Auto_rtb4dec.html
@@ -62,7 +62,7 @@
         <div class="col-md-4">
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="text" class="form-control" id="email" placeholder="first-and-last-name@gmail.com">
+            <input type="text" class="form-control" id="email" placeholder="Email">
           </div>
         </div>
         <div class="col-md-4">
@@ -151,7 +151,7 @@
         <div class="col-md-4">
           <div class="form-group">
             <label for="ip_address">IP Address</label>
-            <input type="text" class="form-control" id="ip_address" placeholder="IPv4 or IPv6">
+            <input type="text" class="form-control" id="ip_address" placeholder="">
           </div>
         </div>
         <div class="col-md-4">
@@ -163,7 +163,7 @@
         <div class="col-md-4">
           <div class="form-group">
             <label for="original_lead_submit_date">Original Lead Submit Date</label>
-            <input type="text" class="form-control" id="original_lead_submit_date" placeholder="2025-12-03 17:39:32">
+            <input type="text" class="form-control" id="original_lead_submit_date" placeholder="">
           </div>
         </div>
       </div>
@@ -185,7 +185,7 @@
         <div class="col-md-4">
           <div class="form-group">
             <label for="driver1_dob">Driver Date of Birth</label>
-            <input type="text" class="form-control" id="driver1_dob" placeholder="1968-12-21">
+            <input type="text" class="form-control" id="driver1_dob" placeholder="">
           </div>
         </div>
         <div class="col-md-4">
@@ -263,3 +263,4 @@
   </script>
 </body>
 </html>
+
