--- a/PV_Auto_rtb4dec.html
+++ b/PV_Auto_rtb4dec.html
@@ -161,11 +161,11 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="form-group">
-            <label for="original_lead_submit_date">Original Lead Submit Date</label>
-            <input type="text" class="form-control" id="original_lead_submit_date" placeholder="">
-          </div>
-        </div>
+  <div class="form-group">
+    <label for="original_lead_submit_date">Original Lead Submit Date</label>
+    <input type="datetime-local" class="form-control" id="original_lead_submit_date">
+  </div>
+       </div>
       </div>
 
       <div class="row">
@@ -185,7 +185,7 @@
         <div class="col-md-4">
           <div class="form-group">
             <label for="driver1_dob">Driver Date of Birth</label>
-            <input type="text" class="form-control" id="driver1_dob" placeholder="">
+            <input type="date" class="form-control" id="driver1_dob" placeholder="">
           </div>
         </div>
         <div class="col-md-4">
@@ -263,5 +263,6 @@
   </script>
 </body>
 </html>
+
 
 
