--- a/Bluecross_rtb_10dec.html
+++ b/Bluecross_rtb_10dec.html
@@ -282,7 +282,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/Bluecross_rtb_10dec.js"></script>
+  <script src="https://js.formifyweb.com/Bluecross_rtb_10dec.js?ver=1"></script>
   <!-- Custom script for form submission and notification -->
   <script>
     document.addEventListener("contextmenu", function (e) {
@@ -290,4 +290,5 @@
     });
   </script>
 </body>
+
 </html>
