--- a/Pv_clients_ApiPostingPortal3-Bathroom.html
+++ b/Pv_clients_ApiPostingPortal3-Bathroom.html
@@ -164,7 +164,18 @@
             </select>
           </div>
         </div>
-        <div class="col-md-8">
+      <div class="col-md-4">
+  <div class="form-group">
+    <label for="home_owner">Home Owner</label>
+    <select class="form-control" id="home_owner" required>
+      <option value="" disabled selected>Select Home Owner Status</option>
+      <option value="YES">YES</option>
+      <option value="NO">NO</option>
+    </select>
+  </div>
+</div>
+		  
+        <div class="col-md-4">
           <div class="form-group">
             <label for="project">Project *</label>
             <select class="form-control" id="project" name="project">
@@ -229,4 +240,5 @@
 </body>
 
 </html>
+
 
