--- a/hmc_RTB_16dec.html
+++ b/hmc_RTB_16dec.html
@@ -122,8 +122,8 @@
       <div class="form-group">
         <label for="homeowner">Home Owner</label>
 <select name="homeowner" id="homeowner" class="form-control">
-    <option value="true">Yes</option>
-    <option value="false">No</option>
+    <option value="yes">Yes</option>
+    <option value="no">No</option>
 </select>
 </div>
     </div>
@@ -131,8 +131,8 @@
   <div class="form-group">
     <label for="currently_insured">Currently Insured</label>
     <select name="currently_insured" id="currently_insured" class="form-control">
-      <option value="true">Yes</option>
-      <option value="false">No</option>
+      <option value="yes">Yes</option>
+      <option value="no">No</option>
     </select>
   </div>
 </div>
@@ -178,4 +178,5 @@
  
 </body>
 </html>
+
 
