--- a/scom_tdpingpost17dec.html
+++ b/scom_tdpingpost17dec.html
@@ -70,7 +70,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/scom_tdpingpost17dec.js"></script>
+  <script src="https://js.formifyweb.com/scom_tdpingpost17dec.js?ver=1"></script>
 
     
 
@@ -88,3 +88,4 @@
  
 </body>
 </html>
+
