--- a/hcom_aca_tdposting.html
+++ b/hcom_aca_tdposting.html
@@ -202,7 +202,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <!-- Custom script for form submission and notification -->
-  <script src="https://js.formifyweb.com/hcom_aca_tdpost13jan.js"></script>
+  <script src="https://js.formifyweb.com/hcom_aca_tdpost13jan.js?ver=1"></script>
   <script>
     document.addEventListener("contextmenu", function (e) {
       e.preventDefault(); // Prevent the context menu from appearing
@@ -210,3 +210,4 @@
   </script>
 </body>
 </html>
+
