--- a/Scom_tdpost_27jan.html
+++ b/Scom_tdpost_27jan.html
@@ -46,7 +46,21 @@
     </div>
 </div>
 </div>
+<div class="row">
+<div class="col-md-6">
+  <div class="form-group">
+    <label for="trusted_form_cert_url">Trusted Form</label>
+    <input type="text" class="form-control" id="trusted_form_cert_url" placeholder="Trusted Form URL" required>
+  </div>
+</div>
+<div class="col-md-6">
+                    <div class="form-group">
+                        <label for="leadid">Lead ID (Jornaya)</label>
+                        <input type="text" class="form-control" id="jornaya_leadid" placeholder="Jornaya Lead ID" required>
+                    </div>
+                </div>
 
+ </div>
 
 
 
@@ -64,7 +78,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/Scom_tdpost_27jan.js"></script>
+  <script src="https://js.formifyweb.com/Scom_tdpost_27jan.js?ver=1"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
@@ -74,3 +88,4 @@
     </script>
 </body>
 </html>
+
