--- a/Bluecross_window_apiportal.html
+++ b/Bluecross_window_apiportal.html
@@ -36,7 +36,7 @@
         <div class="col-md-6">
           <div class="form-group">
             <label for="phone" class="required">Phone Number</label>
-            <input type="tel" class="form-control" id="phone" name="phone" placeholder="(650) 327-1100">
+            <input type="text" class="form-control" id="phone" name="phone" placeholder="(650) 327-1100">
           </div>
         </div>
         <div class="col-md-6">
@@ -239,3 +239,4 @@
 </body>
 
 </html>
+
