--- a/Bluecross_roofing_apiportal.html
+++ b/Bluecross_roofing_apiportal.html
@@ -31,7 +31,7 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="phone" class="required">Phone Number</label>
-                        <input type="tel" class="form-control" id="phone" name="phone" placeholder="(650) 327-1100">
+                        <input type="text" class="form-control" id="phone" name="phone" placeholder="6503271100">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -242,4 +242,5 @@
     <!-- Custom JavaScript -->
     <script src="https://js.formifyweb.com/Bluecross_roofing_apiportal.js"></script>
 </body>
+
 </html>
