--- a/Bluecross_bathroom_apiportal.html
+++ b/Bluecross_bathroom_apiportal.html
@@ -31,7 +31,7 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="phone" class="required">Phone Number</label>
-                        <input type="text" class="form-control" id="phone" name="phone" placeholder="6503271100">
+                        <input type="text" class="form-control" id="phone" name="phone" placeholder="(650) 327-1100">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -216,3 +216,4 @@
 </body>
 
 </html>
+
