--- a/Bluecross_bathroom_apiportal.html
+++ b/Bluecross_bathroom_apiportal.html
@@ -212,8 +212,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     
     <!-- Custom JavaScript -->
-    <script src="https://js.formifyweb.com/Bluecross_bathroom_apiportal.js"></script>
+    <script src="https://js.formifyweb.com/Bluecross_bathroom_apiportal.js?ver=1"></script>
 </body>
 
 </html>
+
 
