--- a/Bluecross_siding_apiportal.html
+++ b/Bluecross_siding_apiportal.html
@@ -31,7 +31,7 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="phone" class="required">Phone Number</label>
-                        <input type="text" class="form-control" id="phone" name="phone" placeholder="6503271100">
+                        <input type="text" class="form-control" id="phone" name="phone" placeholder="(650) 327-1100">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -195,7 +195,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     
     <!-- Custom JavaScript -->
-    <script src="https://js.formifyweb.com/Bluecross_roofing_apiportal.js"></script>
+    <script src="https://js.formifyweb.com/Bluecross_roofing_apiportal.js?ver=1"></script>
 </body>
 
 </html>
+
