--- a/Bluecross_window_apiportal.html
+++ b/Bluecross_window_apiportal.html
@@ -151,7 +151,14 @@
       </div>
 
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4"> <div class="form-group"> 
+          <label for="window_material" class="required">Window Material</label> 
+          <select class="form-control" id="window_material" name="window_material" required> 
+            <option value="">Select Window Material</option> <option value="Vinyl">Vinyl</option> <option value="Wood">Wood</option> <option value="Aluminum">Aluminum</option> <option value="Brick Or Stone">Brick Or Stone</option> <option value="Metal">Metal</option> 
+          </select>
+        </div> 
+        </div>
+        <div class="col-md-4">
           <div class="form-group">
             <label for="ownership" class="required">Ownership</label>
             <select class="form-control" id="ownership" name="ownership" required>
@@ -162,7 +169,7 @@
             </select>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="form-group">
             <label for="credit_rating" class="required">Credit Rating</label>
             <select class="form-control" id="credit_rating" name="credit_rating" required>
@@ -239,6 +246,7 @@
 </body>
 
 </html>
+
 
 
 
