--- a/Bluecross_linktrust_pingpost_home.html
+++ b/Bluecross_linktrust_pingpost_home.html
@@ -53,9 +53,9 @@
                 <label for="LandingPageURL" class="form-label">Landing Page URL</label>
                 <input type="text" id="LandingPageURL" name="LandingPageURL" value="https://topamericaninsurance.com/" class="form-control" placeholder="Landing Page URL" required>
             </div>
-            <div class="col-md-6">
-                <label for="TCPAConsentText" class="form-label">TCPA Consent Text</label>
-                <input type="text" id="TCPAConsentText" name="TCPAConsentText" class="form-control" placeholder="TCPA Consent Text" value="By clicking the "Submit" button, I provide my electronic signature and represent that I am at least 18 and agree to this website\'s Privacy Policy and Terms and Conditions. I also provide my express written consent and authorization to the owner of this website and/or the agents of one or more of the listed Partners to contact me for marketing/telemarketing purposes such as Medicare Supplement Plans, Medicare Advantage, Prescription Drug Plans, Auto Insurance, Life or Final Expense Insurance, at the number and address provided above, including my wireless number if provided, using live operators, automated telephone dialing systems, artificial voice or pre-recorded messages, text messages and/or emails, if applicable, even if I have previously registered the provided number on any Federal or State Do Not Call Registry. I understand that my consent is not required as a condition of purchasing goods or services and can be revoked at any time." readonly required>
+           <div class="col-md-6">
+            <label for="TCPAConsentText" class="form-label">TCPA Consent Text</label>
+            <input type="text" id="TCPAConsentText" name="TCPAConsentText" class="form-control" placeholder="TCPA Consent Text" value='By clicking the "Submit" button, I provide my electronic signature and represent that I am at least 18 and agree to this website\'s Privacy Policy and Terms and Conditions. I also provide my express written consent and authorization to the owner of this website and/or the agents of one or more of the listed Partners to contact me for marketing/telemarketing purposes such as Medicare Supplement Plans, Medicare Advantage, Prescription Drug Plans, Auto Insurance, Life or Final Expense Insurance, at the number and address provided above, including my wireless number if provided, using live operators, automated telephone dialing systems, artificial voice or pre-recorded messages, text messages and/or emails, if applicable, even if I have previously registered the provided number on any Federal or State Do Not Call Registry. I understand that my consent is not required as a condition of purchasing goods or services and can be revoked at any time.' readonly required>
             </div>
             <div class="col-md-6">
                 <label for="IP" class="form-label">IP</label>
@@ -342,3 +342,4 @@
    <script src="https://js.formifyweb.com/Bluecross_linktrust_pingpost_home.js"></script>
 </body>
 </html>
+
