--- a/Genefit_ringbartb_18feb.html
+++ b/Genefit_ringbartb_18feb.html
@@ -145,7 +145,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/Genefit_ringbartb_18feb.js"></script>
+  <script src="https://js.formifyweb.com/Genefit_ringbartb_18feb.js?ver=1"></script>
 
     
 
@@ -163,3 +163,4 @@
  
 </body>
 </html>
+
