--- a/Prag_callgrid_home20feb.html
+++ b/Prag_callgrid_home20feb.html
@@ -128,7 +128,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/Prag_callgrid_home20feb.js"></script>
+  <script src="https://js.formifyweb.com/Prag_callgrid_home20feb.js?ver=1"></script>
 
     
 
@@ -146,3 +146,4 @@
  
 </body>
 </html>
+
