--- a/Fyn1_RTB_21Feb.html
+++ b/Fyn1_RTB_21Feb.html
@@ -88,7 +88,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/Fyn1_RTB_21Feb.js"></script>
+  <script src="https://js.formifyweb.com/Fyn1_RTB_21Feb.js?ver=1"></script>
   <!-- Custom script for form submission and notification -->
    <script>
         document.addEventListener("contextmenu", function (e) {
@@ -97,4 +97,5 @@
     </script>
 </body>
 </html>
+
 
