--- a/Bluecross_tdpostingportal_AH.html
+++ b/Bluecross_tdpostingportal_AH.html
@@ -60,9 +60,13 @@
     .windows {
       background: linear-gradient(135deg, #6FB1FC 0%, #4364F7 100%);
     }
+    
+    .pingpost {
+      background: linear-gradient(135deg, #FF416C 0%, #FF4B2B 100%);
+    }
 
     .container {
-      max-width: 1000px;
+      max-width: 1200px;
     }
   </style>
 </head>
@@ -74,7 +78,7 @@
 
   <div class="row g-4 justify-content-center">
 
-    <div class="col-md-5 col-lg-4">
+    <div class="col-md-6 col-lg-4">
       <div class="card-box bathroom"
            onclick="window.location.href='http://forms.formifyweb.com/Bluecross_bathroom_tdpost_AH'">
         <h3>Bathroom</h3>
@@ -82,7 +86,7 @@
       </div>
     </div>
 
-    <div class="col-md-5 col-lg-4">
+    <div class="col-md-6 col-lg-4">
       <div class="card-box roofing"
            onclick="window.location.href='http://forms.formifyweb.com/Bluecross_roofing_tdpost_AH'">
         <h3>Roofing</h3>
@@ -90,11 +94,19 @@
       </div>
     </div>
 
-    <div class="col-md-5 col-lg-4">
+    <div class="col-md-6 col-lg-4">
       <div class="card-box windows"
            onclick="window.location.href='http://forms.formifyweb.com/Bluecross_windows_tdpost_AH'">
         <h3>Windows</h3>
         <p>TD Post - Window Services</p>
+      </div>
+    </div>
+
+    <div class="col-md-6 col-lg-4">
+      <div class="card-box pingpost"
+           onclick="window.location.href='http://forms.formifyweb.com/Bluecross_tdpingpost_AH'">
+        <h3>New Ping Post AH</h3>
+        <p>TD Ping Post Services</p>
       </div>
     </div>
 
