--- a/Bluecross_tdpostingportal_AH.html
+++ b/Bluecross_tdpostingportal_AH.html
@@ -105,7 +105,7 @@
     <div class="col-md-6 col-lg-4">
       <div class="card-box pingpost"
            onclick="window.location.href='http://forms.formifyweb.com/Bluecross_tdpingpost_AH'">
-        <h3>New Ping Post AH</h3>
+        <h3>New Window Ping Post AH</h3>
         <p>TD Ping Post Services</p>
       </div>
     </div>
@@ -122,3 +122,4 @@
 
 </body>
 </html>
+
